--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.10.1"
 hiltAndroid = "2.56.2"
 hiltNavigationCompose = "1.2.0"
+ksp = "2.1.20-2.0.1"
 javaxInject = "1"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
@@ -53,5 +54,5 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" } # Added this line
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
 
