--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,11 +14,13 @@ kotlinxCoroutinesCore = "1.8.0"
 lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
 composeBom = "2025.05.01"
+material = "1.12.0"
 navigationCompose = "2.9.0"
 kotlinxCoroutinesTest = "1.8.0" # Matches kotlinxCoroutines
 androidxTestCore = "1.6.1"
 datastoreCoreAndroid = "1.1.7"
 jetbrainsKotlinJvm = "2.0.21"
+appcompat = "1.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -47,6 +49,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
